# chatgpt-playground

./: .envrc  .gitignore  README.md  pyproject.toml
chatgpt_playground/: bigquery.py  vector_store.py
chatgpt_playground/chains/: bigquery.py
chatgpt_playground/cli/: __init__.py  cli.py  query.py  store.py
docs/: langchain.md
